@@ -6,8 +6,6 @@ import gympoint.backend.workoutservice.entity.WorkoutBooking;
 import gympoint.backend.workoutservice.mapper.WorkoutBookingMapper;
 import gympoint.backend.workoutservice.repository.WorkoutBookingRepository;
 import gympoint.backend.workoutservice.service.WorkoutBookingService;
-import jakarta.persistence.EntityNotFoundException;
-import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.core.Authentication;
@@ -16,7 +14,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
+import javax.persistence.EntityNotFoundException;
+import javax.servlet.http.HttpServletRequest;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -44,90 +45,58 @@ public class WorkoutBookingServiceImpl implements WorkoutBookingService {
     }
 
     @Override
+    @Transactional
     public WorkoutBookingDto createWorkoutBooking(WorkoutBookingDto workoutBookingDto) {
-        Long clientId = getCurrentClientId();
-        workoutBookingDto.setClientId(clientId);
-        
         WorkoutBooking workoutBooking = workoutBookingMapper.toEntity(workoutBookingDto);
         WorkoutBooking savedWorkoutBooking = workoutBookingRepository.save(workoutBooking);
         return workoutBookingMapper.toDto(savedWorkoutBooking);
     }
 
     @Override
+    @Transactional
     public WorkoutBookingDto updateWorkoutBooking(Long id, WorkoutBookingDto workoutBookingDto) {
         WorkoutBooking existingWorkoutBooking = workoutBookingRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("WorkoutBooking not found with id: " + id));
-
-        Long clientId = getCurrentClientId();
-        if (!existingWorkoutBooking.getClientId().equals(clientId)) {
-            throw new AccessDeniedException("You can only update your own bookings");
-        }
-
+                .orElseThrow(() -> new EntityNotFoundException("Workout booking not found with id: " + id));
+        
         workoutBookingMapper.updateEntityFromDto(workoutBookingDto, existingWorkoutBooking);
         WorkoutBooking updatedWorkoutBooking = workoutBookingRepository.save(existingWorkoutBooking);
         return workoutBookingMapper.toDto(updatedWorkoutBooking);
     }
 
     @Override
+    @Transactional
     public void deleteWorkoutBooking(Long id) {
-        WorkoutBooking workoutBooking = workoutBookingRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("WorkoutBooking not found with id: " + id));
-
-        Long clientId = getCurrentClientId();
-        if (!workoutBooking.getClientId().equals(clientId)) {
-            throw new AccessDeniedException("You can only delete your own bookings");
+        if (!workoutBookingRepository.existsById(id)) {
+            throw new EntityNotFoundException("Workout booking not found with id: " + id);
         }
-
         workoutBookingRepository.deleteById(id);
     }
 
     @Override
-    @Transactional(readOnly = true)
     public WorkoutBookingDto getWorkoutBookingById(Long id) {
         WorkoutBooking workoutBooking = workoutBookingRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("WorkoutBooking not found with id: " + id));
-
-        Long clientId = getCurrentClientId();
-        if (!workoutBooking.getClientId().equals(clientId)) {
-            throw new AccessDeniedException("You can only view your own bookings");
-        }
-
+                .orElseThrow(() -> new EntityNotFoundException("Workout booking not found with id: " + id));
         return workoutBookingMapper.toDto(workoutBooking);
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<WorkoutBookingDto> getWorkoutBookingsByClientId(Long clientId) {
-        Long currentClientId = getCurrentClientId();
-        if (!clientId.equals(currentClientId)) {
-            throw new AccessDeniedException("You can only view your own bookings");
-        }
-
-        List<WorkoutBooking> workoutBookings = workoutBookingRepository.findByClientId(clientId);
-        return workoutBookings.stream()
+        return workoutBookingRepository.findByClientId(clientId).stream()
                 .map(workoutBookingMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<WorkoutBookingDto> getWorkoutBookingsByTrainerId(Long trainerId) {
-        Long clientId = getCurrentClientId();
-        List<WorkoutBooking> workoutBookings = workoutBookingRepository.findByTrainerId(trainerId);
-        return workoutBookings.stream()
-                .filter(booking -> booking.getClientId().equals(clientId))
+        return workoutBookingRepository.findByTrainerId(trainerId).stream()
                 .map(workoutBookingMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<WorkoutBookingDto> getWorkoutBookingsByTrainingSessionId(Long trainingSessionId) {
-        Long clientId = getCurrentClientId();
-        List<WorkoutBooking> workoutBookings = workoutBookingRepository.findByTrainingSessionId(trainingSessionId);
-        return workoutBookings.stream()
-                .filter(booking -> booking.getClientId().equals(clientId))
+        return workoutBookingRepository.findByTrainingSessionId(trainingSessionId).stream()
                 .map(workoutBookingMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 } 
